# drawrace

./: .gitignore  .needle.yaml  Cargo.toml  DRAWBUILD_CI_STATUS.md  Dockerfile.api  Dockerfile.live  Dockerfile.validator  PROGRESS.md  docker-compose.snapshot.yml  eslint.config.js  justfile  package.json  playwright.browserstack.config.ts  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.argo/: drawrace-build-workflowtemplate.yml  workflow-template.yaml
.marathon/: instruction.md  start.sh
crates/live/: Cargo.toml
crates/live/src/: app.rs  background.rs  ghost.rs  lib.rs  lobby.rs  main.rs  messages.rs  physics.rs  room.rs  websocket.rs
crates/live/src/physics/: mod.rs  track.rs  wasm_engine.rs
crates/update-ghosts/: Cargo.toml
crates/update-ghosts/src/: main.rs
crates/validator/: Cargo.toml  reference-champion.json  reference-ghosts.json
crates/validator/src/: champion.rs  lib.rs  main.rs  metrics.rs  resim.rs  seed_loader.rs  track.rs  wasm_abi.rs  wasm_loader.rs
crates/validator/test-data/ghosts/: expected.json  ghost-dev-001.blob  ghost-dev-002.blob  ghost-dev-003.blob  ghost-tutorial-a.blob  ghost-tutorial-b.blob  ghost-tutorial-c.blob
crates/validator/test-data/scripts/: generate-reference-ghosts.ts  generate-refs-from-blobs.py  generate-refs-from-blobs.ts  generate-test-ghosts.ts
crates/validator/tests/: README.md  rejection.rs  replay.rs  resim_roundtrip.rs
docs/: drawrace-pg-backups-bucket-current-configuration.md  garage-cli-access-verification.md  garage-cli-verification-2026-06-27-nd-5m5.md  garage-cli-verification-final-2026-06-27.md  garage-cli-verification-recheck-2026-06-27-2nd.md  garage-cli-verification-recheck-2026-06-27.md  garage-cli-verification-summary.md  garage-s3-key-creation-procedure.md  garage-s3-key-generation-current-status.md  garage-s3-key-generation-status.md  garage-s3-setup.md  nd-1wf-summary.md
e2e/: a11y.spec.ts  debug.spec.ts  device-matrix.spec.ts  game.spec.ts  perf.spec.ts  snapshot.spec.ts  types.d.ts
k8s/: ROTATE-KEY-SETUP.md  alertmanager-config.yaml  api-deployment.yaml  application.yaml  configmap.yaml  drawrace-build-workflowtemplate.yml  drawrace-ci-workflowtemplate.yml  drawrace-submitter-rbac.yaml  iad-acb-drawrace-chaos-sa.yaml  iad-acb-drawrace-rotate-key-rbac.yaml  iad-acb-kubeconfig-setup.md  ingress.yaml  live-deployment.yaml  namespace.yaml  networkpolicy.yaml  pushgateway.yaml  (+8 more)
(+236 files in other folders)
