[package]
name = "update-ghosts"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "update-ghosts"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasmtime = "30"
chrono = "0.4"
drawrace-validator = { path = "../validator" }
drawrace-api = { path = "../api" }
